syntax = "proto3";

option go_package = "github.com/cyjhuiz/netflix-clone/backend/show/proto";

service EpisodeGRPC {
  rpc GetEpisodeByShowIDAndNumber(GetEpisodeByShowIDAndNumberRequest) returns (GetEpisodeByShowIDAndNumberResponse);
}

message GetEpisodeByShowIDAndNumberRequest {
  int64 showID = 1;
  int64 number = 2;
}

message GetEpisodeByShowIDAndNumberResponse {
  int64 episodeID = 1;
  int64 showID = 2;
  int64 number = 3;
  string title = 4;
  string description = 5;
  string videoURL = 6;
  string thumbnailURL = 7;
  string releaseDate = 8;
  Show show = 9;
}

message Show {
    int64 showID = 1;
    string title = 2;
    string description = 3;
    int64 duration = 4;
    string showType = 5;
    int64 categoryID = 6;
    string thumbnailURL = 7;
    string releaseDate = 8;
    int64 uploaderID = 9;
}
